--- a/style.css
+++ b/style.css
@@ -10,23 +10,52 @@ body {
 	height: 100vh;
 	background-image: url(img/big.jpg);
 	background-size: cover;
-
-}
-.text_container{
-
-	margin-top: 10px;
-	margin-right: 10px;
-	margin-left: 10px;
-	margin-bottom: 10px; 
-
+	font-family: 'Lobster', cursive;
+	color: #fff;
 }
 
-.photo_container{
+.header_text_large {
+	font-size: 100px;
+}
+
+.header_text_small {
+	font-size: 40px;
+	margin-bottom: 50px;
+}
+
+.button	{
+background-color: #990000;
+font-family: 'Roboto', sans-serif;
+padding: 20px 30px;
+font-size: 20px;
+color: #fff;
+text-decoration: none;
+border: dotted;
+border-radius: 25px
+}
+
+.text_container {
+	margin: 50px 10px;
+}
+
+.photo_container {
 	display: flex;
 	justify-content: space-around;
-	flex-direction: row;
-	
+
 }
-.photo_container img{
-    margin:0 10px;
+
+.photo_container img {
+	margin: 0 10px;
+	overflow-x: hidden;
+}
+
+.container_footer {
+	display: flex;
+	justify-content: space-around;
+	background-color: #000;
+	padding: 50px 0;
+}
+
+.container_footer a {
+	color: #fff;
 }
