--- a/style.css
+++ b/style.css
@@ -1,31 +1,152 @@
-body{
-	margin:0;
+body {
+	margin: 0;
 }
 
-.text{
-	display:flex;
-	font-family: 'Alegreya Sans SC', sans-serif;
-	color:  #000 ;
-	background-color: #f00;
-	font-size: 10vw;
-	flex-direction:row;
-	justify-content: center;
-	mix-blend-mode: multiply;
-	padding-left:100%;
-	padding-right:100%;
-
-}
-
-
-.photo_container{
-	background-image: url("photo.jpg");
-	background-size: cover;
-	display:flex;
-	justify-content: center;
+.main_header {
+	display: flex;
 	align-items: center;
-	height: 100vw;
-	padding-bottom:10vw;
-	background-color: hsla(240, 100%, 60%, 0.000000001);
-	background-blend-mode:  hue;
+	background-color: #2e323f;
+	padding: 0 8rem;
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+}
 
+.logo {
+	flex-grow: 1;
+	flex-basis: 0;
+	color: #fff;
+	font-size: 2rem;
+}
+
+.header_menu {
+	flex-grow: 1;
+	flex-basis: 0;
+}
+
+.menu_container {
+	display: flex;
+	justify-content: space-between;
+	list-style: none;
+}
+
+.menu_item {
+	color: #fff;
+	text-decoration: none;
+	font-size: 18px;
+}
+
+.rounded {
+	background-color: #a59678;
+	padding: 0.25rem 1rem;
+	border-radius: 100px;
+}
+
+.section_first {
+	display: flex;
+	background-color: #3b4050;
+	padding: 8rem;
+}
+
+.section_first_left {
+	font-family: 'Oswald', sans-serif;
+	font-size: 90px;
+	color: #fff;
+	line-height: 6rem;
+	flex-grow: 1;
+	flex-basis: 0;
+}
+
+.text_dark {
+	color: #a59678;
+}
+
+.section_first_right {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 24px;
+	color: #fff;
+	flex-grow: 1;
+	flex-basis: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+}
+
+.section_first_right .rounded{
+	margin-top: 2rem;
+	font-family: 'Oswald', sans-serif;
+	font-size: 24px;
+	text-transform: uppercase;
+	padding: 0.5rem 3rem;
+	align-self: start;
+}
+
+.section_second{
+	justify-content: space-between;
+	padding: 6rem;
+	font-size: 18px;
+	font-family: 'Montserrat', sans-serif;
+	text-align: center;
+	display: flex;
+	color: #464b5a;
+	background-color: #f1f1f1;
+}
+
+.section_second h2{
+	color: #a59678;
+	font-family: 'Oswald', sans-serif;
+	font-size: 30px;
+}
+
+.section_third{
+	padding: 6rem;
+	display: flex;
+}
+
+.section_third_left{
+	padding-right: 3rem;
+	
+}
+.section_third_left h2{
+	font-family: 'Oswald', sans-serif;
+	font-size: 36px;
+	color: #a59678;
+}
+
+.section_third_left img{
+	width: 40rem;
+	height: 30rem;
+}
+
+.section_third_left p{
+	color: #464b5a;
+	font-size: 21px;
+	font-family: 'Montserrat', sans-serif;
+}
+
+
+
+
+.section_third_right{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.section_third_right article{
+	padding: 2rem;
+	text-align: center;
+	margin: 0.5rem;
+	background-color: #3b4050;
+	}
+
+.section_third_right h2{
+	font-family: 'Oswald', sans-serif;
+	font-size: 30px;
+	color: #fff;
+}
+
+.section_third_right p{
+	color: #fff;
+	font-size: 18px;
+	font-family: 'Montserrat', sans-serif;
 }
